# vibe-monorepo

./: .gitattributes  .gitignore  docker-compose.yml
.codex/: hooks.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/application/dto/: llm.py  storage.py
backend/app/application/ports/: external_clients.py
backend/app/application/services/: __init__.py  llm_prompt_service.py
backend/app/application/use_cases/: __init__.py  llm_template_json.py  storage_object.py
backend/app/core/: config.py  error_codes.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  observability.py
backend/app/domain/: errors.py
backend/app/infrastructure/email/: smtp_client.py
backend/app/infrastructure/queue/: app.py
backend/app/infrastructure/storage/: __init__.py  aliyun_oss.py
backend/app/schemas/: common.py
backend/tests/: conftest.py
backend/tests/integration/: test_exception_handlers.py  test_metrics.py
backend/tests/unit/: test_aliyun_oss_storage.py  test_llm_prompt_service.py  test_llm_template_json_use_case.py  test_storage_object_use_case.py
backend/tests/unit/fixtures/llm/: tech_create_schema.json  tech_create_template.j2
docs/: BACKEND_SPEC.md  FRONTEND_SPEC.md  skills-manual.md  skills-manual.zh-CN.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
scripts/: check_structure_contracts.sh
user-requirements/: 12-user-generation-orchestration-report.md  webpage-analysis-ux-course-builder.md
(+106 files in other folders)
